--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+moxa-ublox-config-utils (1.0.1) unstable; urgency=medium
+
+  * fix: need more time for the module enter reset process
+  * fix: exit with proper value when configure failed
+
+ -- Fero JD Zhou <FeroJD.Zhou@moxa.com>  Mon, 02 Sep 2019 19:37:07 +0800
+
 moxa-ublox-config-utils (1.0.0) unstable; urgency=low
 
   * Initial Release.
