--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+moxa-ublox-config-utils (1.0.3) unstable; urgency=medium
+
+  * fix: correct the dependency service name
+
+ -- Fero JD Zhou <FeroJD.Zhou@moxa.com>  Fri, 04 Oct 2019 17:09:27 +0800
+
 moxa-ublox-config-utils (1.0.2) unstable; urgency=medium
 
   * fix: correct the property RemainAfterExit
