--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+moxa-ublox-config-utils (1.3.0) stretch; urgency=medium
+
+  * feat: support multi modules
+
+ -- Tzongyen Lin <tzongyen.lin@moxa.com>  Fri, 11 Sep 2020 10:51:08 +0800
+
 moxa-ublox-config-utils (1.2.1) stretch; urgency=medium
 
   * fix: using += to avoid to overwrite others' udev rule systemd_wants variable
